tests/community/submissions/32/personal_tests/TypeError08.output.error
Type error at <stdin> line 2 col 13: operation "*" not defined for String "2IMD20", String "2IMD20"
