tests/community/submissions/32/personal_tests/TypeError08.sl
function main() {
    println("2IMD20" * "2IMD20");
}